fix: fix get stories by user_id api